[Refactor] admin backend에 Java 21 문법 적용 (#2164)